--- a/views/room.ejs
+++ b/views/room.ejs
@@ -47,34 +47,28 @@
                 </div>
             </div>
             <div class="main_controls">
+                <div class="main_controls_block"></div>
                 <div class="main_controls_block">
-                    <div class="main_controls_button" id="mic" onclick="muteUnmute()">
-                        <i class="fas fa-microphone-slash"></i>
-                        <span>Mute</span>
-                    </div>
-
-                    <div class="main_controls_button" id="video" onclick="VideomuteUnmute()">
-                        <i class="fas fa-video-slash"></i>
-                        <span>Stop Video</span>
-                    </div>
+                  <div class="main_controls_button" id="mic" onclick="muteUnmute()">
+                      <i class="fas fa-microphone-slash"></i>
+                      <span>Mute</span>
+                  </div>
+                  <div class="main_controls_button" id="video" onclick="VideomuteUnmute()">
+                      <i class="fas fa-video-slash"></i>
+                      <span>Stop Video</span>
+                  </div>
+                  <div class="main_controls_button" onclick="showchat()">
+                      <i class="fas fa-comment-alt"></i>
+                      <span>Chat</span>
+                  </div>
+                  <div class="main_controls_button" onclick="invitebox()">
+                      <i class="fas fa-user-plus"></i>
+                      <span>Invite</span>
+                  </div>
                 </div>
                 <div class="main_controls_block">
-                    <div class="main_controls_button" onclick="invitebox()">
-                        <i class="fas fa-user-plus"></i>
-                        <span>Invite</span>
-                    </div>
-                    <div class="main_controls_button">
-                        <i class="fas fa-user-friends"></i>
-                        <span>Participants</span>
-                    </div>
-                    <div class="main_controls_button" onclick="showchat()">
-                        <i class="fas fa-comment-alt"></i>
-                        <span>Chat</span>
-                    </div>
-                </div>
-                <div class="main_controls_block">
-                    <div class="main_controls_button leave_red">
-                        <span class="leave_meeting"><a href="/">Leave Meeting</a></span>
+                    <div class="main_controls_button leave_red" onClick="endCall()">
+                        <span class="leave_meeting">Leave Meeting</span>
                     </div>
                 </div>
             </div>
