--- a/static/styles.css
+++ b/static/styles.css
@@ -1,163 +1,168 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-    height: 100%;
-    font-family: "Roboto", sans-serif;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
 }
 
 #video-grids {
-    display: flex
+  display: flex;
 }
 
 a,
 a:hover,
 a:focus,
 a:active {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .video-grid {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    align-items: center;
-    flex-wrap: wrap;
-    overflow-y: auto;
-    background-color: yellow;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  flex-wrap: wrap;
+  overflow-y: auto;
+  background-color: yellow;
 }
 
 h1 {
-    position: absolute;
-    bottom: 0;
-    left: 40%;
+  position: absolute;
+  bottom: 0;
+  left: 40%;
 }
 
 video {
-    display: block;
-    flex: 1;
-    object-fit: cover;
-    border: 5px solid #000;
-    max-width: 600px;
-    border-radius: 25px;
+  display: block;
+  flex: 1;
+  object-fit: cover;
+  border: 5px solid #000;
+  max-width: 100%;
+  border-radius: 25px;
 }
 
 .mainclone {
-    height: 100%;
-    display: flex;
-    flex-direction: row;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .main_left {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_right {
-    display: flex;
-    flex: 0.2;
-    flex-direction: column;
-    background-color: #242324;
+  display: flex;
+  flex: 0.2;
+  flex-direction: column;
+  background-color: #242324;
 }
 
 .main_controls_block {
-    flex-direction: row;
-    display: flex;
+  flex-direction: row;
+  display: flex;
+  margin: 0 auto;
 }
 
 .main_controls {
-    display: flex;
-    flex-direction: row;
-    background-color: #1C1E20;
-    color: white;
-    padding: 10px;
-    justify-content: space-between
+  display: flex;
+  flex-direction: row;
+  background-color: #1c1e20;
+  color: white;
+  padding: 10px;
+  justify-content: space-between;
 }
 
 .main_controls_button {
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-    padding: 3px 10px;
-    min-width: 80px;
-    align-items: center;
-    justify-content: center;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  padding: 3px 10px;
+  min-width: 80px;
+  align-items: center;
+  justify-content: center;
 }
 
 .main_videos {
-    flex-grow: 1;
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 40px;
+  flex-grow: 1;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 40px;
 }
 
 .leave_red {
-    color: white;
-    background-color: red;
-    border-radius: 5%;
+  color: white;
+  background-color: red;
+  border-radius: 5%;
 }
 
 .main__message_container {
-    padding: 20px 15px;
-    display: flex;
+  padding: 20px 15px;
+  display: flex;
 }
 
 .main__message_container input {
-    flex-grow: 1;
-    background-color: transparent;
-    color: white;
-    border: none;
-    outline: none
+  flex-grow: 1;
+  background-color: transparent;
+  color: white;
+  border: none;
+  outline: none;
 }
 
 .main__chat_window {
-    flex-grow: 1;
-    overflow-y: auto;
+  flex-grow: 1;
+  overflow-y: auto;
 }
 
 .main_controls_button:hover {
-    background-color: #686666;
-    border-radius: 25px;
+  background-color: #686666;
+  border-radius: 25px;
 }
 
 .main_right_header {
-    color: white;
-    text-align: center;
-    font-size: 20px;
-    padding: 10px;
-    border-bottom: 2px solid #3d3d42;
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  padding: 10px;
+  border-bottom: 2px solid #3d3d42;
 }
 
 .message {
-    color: white;
-    list-style-type: none;
-    border: 2px solid #3d3d42;
-    margin-bottom: 5px
+  color: white;
+  list-style-type: none;
+  border: 2px solid #3d3d42;
+  margin-bottom: 5px;
 }
 
 .main_right_header h6 {
-    animation: animate 20s linear infinite;
-    background-image: linear-gradient(to right, #f00, #ff0, #0ff, #0f0, #00f);
-    background-size: 1000%;
+  animation: animate 20s linear infinite;
+  background-image: linear-gradient(to right, #f00, #ff0, #0ff, #0f0, #00f);
+  background-size: 1000%;
+}
+
+.redColor {
+  color: red;
 }
 
 @keyframes animate {
-    0% {
-        background-position: 0% 100%;
-    }
-    50% {
-        background-position: 100% 0%;
-    }
-    100% {
-        background-position: 0% 100%;
-    }
+  0% {
+    background-position: 0% 100%;
+  }
+  50% {
+    background-position: 100% 0%;
+  }
+  100% {
+    background-position: 0% 100%;
+  }
 }
