end call for All feature added

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -73,6 +73,10 @@
                       <i class="fas fa-phone"></i>
                       <span>End Call</span>
                   </div>
+                  <div class="main_controls_button redColor" onClick="endCallForAll()">
+                      <i class="fas fa-phone"></i>
+                      <span>End For Call</span>
+                  </div>
                 </div>
 
             </div>
