--- a/views/room.ejs
+++ b/views/room.ejs
@@ -47,6 +47,7 @@
                 </div>
             </div>
             <div class="main_controls">
+                <div class="main_controls_block"></div>
                 <div class="main_controls_block">
                   <div class="main_controls_button" onclick="muteUnmute()">
                       <i class="fas fa-microphone" id="mute-icon"></i>
@@ -68,16 +69,21 @@
                       <i class="fas fa-desktop"></i>
                       <span>Share</span>
                   </div>
-                  <div class="main_controls_button redColor" onClick="endCall()">
-                      <i class="fas fa-phone"></i>
-                      <span>End Call</span>
-                  </div>
-                  <div class="main_controls_button redColor" onClick="endCallForAll()">
-                      <i class="fas fa-phone"></i>
-                      <span>End For Call</span>
+
+                </div>
+                <div class="main_controls_block">
+                  <div class="main_controls_button">
+                    <div class="btn-group">
+                      <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <span class="leave_meeting">End Call</span>
+                      </button>
+                      <div class="dropdown-menu dropdown-menu-right">
+                        <button class="dropdown-item" type="button" onClick="endCall()">Leave Call</button>
+                        <button class="dropdown-item" type="button" onClick="endCallForAll()">End Meeting for All</button>
+                      </div>
+                    </div>
                   </div>
                 </div>
-
             </div>
         </div>
         <div class="main_right" id="chat">
