--- a/views/room.ejs
+++ b/views/room.ejs
@@ -69,6 +69,10 @@
                       <i class="fas fa-desktop"></i>
                       <span>Share</span>
                   </div>
+                  <!--div class="main_controls_button" id="recording" onclick="recordingHandle()">
+                      <i class="fas fa-record-vinyl"></i>
+                      <span id="recordText">Start Recording</span>
+                  </div-->
 
                 </div>
                 <div class="main_controls_block">
