--- a/views/room.ejs
+++ b/views/room.ejs
@@ -76,7 +76,9 @@
 
                 </div>
                 <div class="main_controls_block">
-                  <div class="main_controls_button">
+                  <div class="btnControl" id="visitNotes">
+                  </div>
+                  <div class="main_controls_button btnControl">
                     <div class="btn-group">
                       <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="leave_meeting">End Call</span>
