mobile responsive added

--- a/static/styles.css
+++ b/static/styles.css
@@ -173,3 +173,43 @@ video {
     background-position: 0% 100%;
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .mobileDiv {
+    display: none;
+  }
+
+  .mainCenterDiv {
+    margin: 0 auto;
+  }
+
+  video {
+    max-width: 100%;
+    width: 100% !important;
+  }
+
+  .dropdown-item {
+    padding: 10px 20px !important;
+  }
+
+  #video-grids {
+    display: block;
+  }
+
+  .video-grid {
+    margin-bottom: 20px;
+  }
+
+  .main_right {
+    width: 100%;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .mobileDiv1 {
+    display: none;
+  }
+}
