--- a/static/styles.css
+++ b/static/styles.css
@@ -206,6 +206,10 @@ video {
     top: 0;
     bottom: 0;
   }
+
+  .moreIcons button i {
+    padding: 0 10px;
+  }
 }
 
 @media only screen and (min-width: 768px) {
